@@ -1,3 +1,11 @@
+2011-05-26 Stefan Bidigaray <stefanbidi@gmail.com>
+
+	* GNUmakefile:
+	* Source/CFUUID.c:
+	* Source/CFRuntime.m:
+	* Headers/CoreFoundation/CFUUID.h: Added CFUUID.
+	* Tests/CFUUID: And some tests.
+
 2011-05-20 Stefan Bidigaray <stefanbidi@gmail.com>
 
 	* Source/NSCFType.m:
